# blueprint

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  justfile  mlflow.db  pyproject.toml
benchmark/: README.md  pyproject.toml  run_benchmark.py
benchmark/golden_data/: element_pick_careers.json  element_pick_contact.json  schema.json
benchmark/results_challenger/: comparison_report.json  comparison_report.md  raw_llama3-kyb-lora_fp16.json  raw_llama3-kyb-lora_q4.json  raw_llama3-kyb-lora_q8.json  raw_llama3.2_3b.json  raw_llama3_8b-instruct-fp16.json  raw_llama3_8b-instruct-q8_0.json  raw_llama3_8b.json
benchmark/src/benchmark/: __init__.py  __main__.py  cli.py  config.py
benchmark/src/benchmark/backends/: __init__.py  base.py  ollama.py  transformers.py
benchmark/src/benchmark/golden/: __init__.py  loader.py  schema.py
benchmark/src/benchmark/harness/: __init__.py  metrics.py  runner.py  scoring.py
benchmark/src/benchmark/lora/: __init__.py  data.py  merge.py  training.py
benchmark/src/benchmark/report/: __init__.py  markdown.py  pareto.py  plots.py
db/init/: 001_schema.sql  002_discovered_boards.sql  003_companies.sql  004_ats_discoveries_add_company_id.sql  005_companies_merge_sources.sql  006_companies_add_enrichment.sql  007_companies_add_naics.sql  008_sourcing_runs.sql  009_company_signals.sql  010_signals_upsert.sql  011_pgvector_embeddings.sql
docs/adr/: 001-postgresql-as-shared-data-bus.md  002-local-llm-via-ollama.md  003-playwright-for-browser-automation.md  004-uuid-primary-keys-with-enum-status.md  005-python-src-layout-with-pyproject-toml.md  006-nextjs-standalone-docker-multistage.md  007-latex-for-ats-pdf-generation.md  008-single-server-private-infrastructure.md  009-polling-based-service-architecture.md  010-deferred-authentication.md  README.md
lora/: README.md  export_gguf.py  pyproject.toml  train_qlora.py
lora/src/lora/: __init__.py  __main__.py  capture.py  cli.py  edge_cases.py  filter.py  formatter.py
services/applier/: Dockerfile  pyproject.toml
services/applier/src/applier/: __init__.py  main.py
services/common/: pyproject.toml
services/common/src/common/: __init__.py  companies.py  db.py  discovery.py  jobs.py  models.py  signals.py  sourcing_runs.py
services/dashboard/: package-lock.json  package.json  tailwind.config.ts
services/dashboard/src/app/: layout.tsx  page.tsx
services/evaluator/: .dockerignore  Dockerfile  pyproject.toml
services/evaluator/src/evaluator/: __init__.py  main.py
services/scout/: Dockerfile  pyproject.toml
services/scout/src/scout/: __init__.py  config.py  discovery.py  filters.py  main.py  parsers.py  sourcing_runner.py
services/scout/src/scout/scrapers/: __init__.py  aggregator_base.py  catalog_base.py  greenhouse.py  lever.py  remoteok.py  workday.py
services/scout/src/scout/sourcing/: __init__.py  base.py  careeronestop.py  colorado_sos.py  fdic.py  iowa_sos.py  ncua.py  newyork_sos.py  oregon_sos.py  osha.py  propublica.py  sba_ppp.py  sec_edgar.py  socrata_base.py  texas_sos.py  wikidata.py
services/verifier/: pyproject.toml
services/verifier/src/verifier/: __init__.py  config.py  main.py  mcp_server.py  runner.py
services/verifier/src/verifier/checks/: __init__.py  discovery.py  search.py  sec.py  website.py
services/verifier/src/verifier/graph/: __init__.py  build.py  edges.py  nodes.py  state.py  vectorstore.py
