[project]
name = "blueprint-benchmark"
version = "0.1.0"
description = "Quantization & LoRA cost-quality benchmark harness for KYB verification"
requires-python = ">=3.12"
dependencies = [
    "blueprint-verifier>=0.1.0",
    "langchain>=0.3",
    "langchain-ollama>=0.3",
    "httpx>=0.27",
    "pydantic>=2.0",
    "mlflow>=2.12",
    "matplotlib>=3.9",
    "click>=8.1",
]

[project.optional-dependencies]
lora = [
    "transformers>=4.40",
    "peft>=0.11",
    "bitsandbytes>=0.43",
    "datasets>=2.19",
    "accelerate>=0.30",
    "torch>=2.3",
]

[project.scripts]
benchmark = "benchmark.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]
