[project]
name = "blueprint-lora"
version = "0.1.0"
description = "LoRA training data generation from KYB cascade signals"
requires-python = ">=3.12"
dependencies = [
    "blueprint-verifier>=0.1.0",
    "blueprint-benchmark>=0.1.0",
    "click>=8.1",
]

[project.scripts]
lora = "lora.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora"]
