[project]
name = "blueprint-applier"
version = "0.1.0"
description = "Blueprint Applier — automated application submission service"
requires-python = ">=3.12"
dependencies = [
    "blueprint-common>=0.1.0",
    "playwright>=1.49",
    "python-dotenv>=1.0",
    "Jinja2>=3.1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
