[project]
name = "blueprint-common"
version = "0.1.0"
description = "Blueprint shared DB layer — connection pooling, models, job helpers"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
