[project]
name = "blueprint-scout"
version = "0.1.0"
description = "Blueprint Scout — job board ingestion service"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
