[project]
name = "blueprint-verifier"
version = "0.1.0"
description = "Blueprint Verifier — company liveness & internet presence signals"
requires-python = ">=3.12"
dependencies = [
    "blueprint-common>=0.1.0",
    "httpx>=0.27",
    "ddgs>=7.0",
    "python-dotenv>=1.0",
    "playwright>=1.49",
    "camoufox[geoip]>=0.4",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
blueprint-common = { workspace = true }
